Footer alignment fix

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -62,36 +62,26 @@
     padding: $spacing-unit 0;
 }
 
-.footer-col-wrapper {
+.footer-table {
+    width: 100%;
+    table-layout: fixed;
     font-size: 15px;
     font-weight: bold;
-    color: $grey-color;
-    margin-left: -$spacing-unit / 2;
     @extend %clearfix;
-}
 
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
+    td {
+        &:nth-child(1) {
+            text-align: left;
+        }
 
-.footer-col-1 {
-    width: -webkit-calc(33% - (#{$spacing-unit} / 2));
-    width:         calc(33% - (#{$spacing-unit} / 2));
-    text-align: left;
-}
+        &:nth-child(2) {
+            text-align: center;
+        }
 
-.footer-col-2 {
-    width: -webkit-calc(33% - (#{$spacing-unit} / 2));
-    width:         calc(33% - (#{$spacing-unit} / 2));
-    text-align: center;
-}
-
-.footer-col-3 {
-    width: -webkit-calc(33% - (#{$spacing-unit} / 2));
-    width:         calc(33% - (#{$spacing-unit} / 2));
-    text-align: right;
+        &:nth-child(3) {
+            text-align: right;
+        }
+    }
 }
 
 
